# haskell-practice

./: laundry-logic.cabal
Laundry/: LanguageHaskell.hs
test/: LanguageHaskellSpec.hs
