Name:                   laundry-logic
Version:                0.0.0
Author:                 Kai Suzuki <kai.zoa1@gmail>
Maintainer:             Kai Suzuki <kai.zoa1@gmail>
License:                BSD3
License-File:           LICENSE
Synopsis:               Laundry Logic for Haskell
Description:            Using Cabal as test framework for doctest and hspec
Category:               Laundry
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Laundry.LanguageHaskell  
  Build-Depends:        base >= 4 && < 5
                      , array

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        LanguageHaskellSpec
  Build-Depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , laundry-logic

Source-Repository head
  Type:                 git
  Location:             https://github.com/kai.zoa1/laundry-logic
